--- a/css/styles.css
+++ b/css/styles.css
@@ -409,3 +409,32 @@ letter-spacing: 0.02em;
 color: #f4f4fd;
   width: 264px;
 }
+
+.icon-list {
+  display: flex;
+    gap: 24px;
+}
+
+.icon-item {
+  width: 40px;
+  height: 40px;
+}
+
+.icon-link {
+  width: 100%;
+    height: 100%;
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-icon {
+  fill: #f4f4fd;
+}
+
+.icon-link:hover,
+.icon-link:focus {
+  background-color: aquamarine;
+}
