--- a/css/styles.css
+++ b/css/styles.css
@@ -422,10 +422,12 @@ display: inline-block;
 }
 
 .social-mane {
-display: inline-block;
 font-weight: 500;
 font-size: 16px;
-  
+
+line-height: 24px; 
+line-height: 1.5;
+letter-spacing: 0.02em;
 color: #fff;
 
 padding-bottom: 16px;
