--- a/css/styles.css
+++ b/css/styles.css
@@ -316,9 +316,9 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7),
 
 .icon-icon-team {
 gap: 24px;
-padding-top: 8px;
-padding-left: 16px;
-padding-right: 16px;
+margin-top: 8px;
+margin-left: 16px;
+margin-right: 16px;
 }
 
 
