--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,7 @@ img {
 
 background-image: linear-gradient(rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)),
-    url(../images/images/people-office.png);
+    url(../images/people-office.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
