--- a/css/styles.css
+++ b/css/styles.css
@@ -238,6 +238,10 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7),
   color: #434455;
 }
 
+.icon-link-feature {
+border-radius: 20%;
+}
+
 /* section-3 Our Team*/
 .team {
   display: flex;
