--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,7 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7),
 }
 
 .icon-link-feature {
-border-radius: 30%;
+border-radius: 2px;
 }
 
 /* section-3 Our Team*/
