--- a/css/styles.css
+++ b/css/styles.css
@@ -327,6 +327,21 @@ border-radius: 2px;
   color: #434455;
 }
 
+.icon-item-team {
+  width: 40px;
+  height: 40px;
+}
+
+.icon-link-team {
+  width: 100%;
+  height: 100%;
+  background-color: #4D5AE5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .icon-list-team {
   display: flex;
   gap: 24px;
@@ -338,6 +353,11 @@ border-radius: 2px;
 
 .icon-icon-team {
 fill: #f4f4fd;
+}
+
+.icon-link-team:hover,
+.icon-link-team:focus {
+ background-clip: padding-box;
 }
 
 /* section-4 Our Portfolio */
