--- a/css/styles.css
+++ b/css/styles.css
@@ -245,7 +245,7 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7),
   color: #434455;
 }
 
-.icon-link-feature {
+.icon-icon-feature {
 border-radius: 2px;
 }
 
