--- a/css/styles.css
+++ b/css/styles.css
@@ -247,6 +247,7 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7),
 
 .icon-icon-feature {
 border-radius: 2px;
+margin-bottom: 8px;
 }
 
 /* section-3 Our Team*/
