--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,7 @@ img {
 /* header */
 .header-main {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -115,8 +116,6 @@ img {
 .item-studio:hover
 .item-studio:active {
   color: #404BBF;
-  background: #404bbf;
-  border-radius: 2px;
 }
 
 .header-address-menu {
@@ -124,6 +123,23 @@ img {
   align-items: center;
   gap: 40px;
 }
+
+.item-studio {
+position: relative;
+   color: #404bbf; 
+  }
+
+.item-studio::after {
+ content: attr (href="./index.html");
+   width: 100%;
+  position: absolute; 
+  left: 0;
+  bottom: -1px; 
+  height: 4px;
+  background-color: #404bbf; 
+  border-radius: 2px; 
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
 .header-address-item {
   display: flex;
@@ -138,9 +154,15 @@ img {
   color: #404bbf;
 }
 
+.header-address-item-one {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .header-address-item-two {
   display: flex;
   margin-right: 0;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* main */
