--- a/css/styles.css
+++ b/css/styles.css
@@ -168,12 +168,13 @@ position: relative;
 /* main */
 /* section-1 */
 .page {
+  max-width: 1440px; 
   padding: 188px 0;
   background: #2e2f42;
 
 background-image: linear-gradient(rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)),
-    url(../images/people-office.png);
+    url(../images/img-name.jpeg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -211,6 +212,8 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7),
   cursor: pointer;
 
   margin: 0 auto;
+
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .page-button:hover,
