--- a/css/styles.css
+++ b/css/styles.css
@@ -174,7 +174,7 @@ position: relative;
 
 background-image: linear-gradient(rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)),
-    url(../images/img-name.jpeg);
+    url(../images/images/people-office-1.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -228,6 +228,19 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7),
 
 .feature-item {
   width: calc((100% - 72px) / 4);
+}
+
+.feature-one {
+display: flex;
+align-items: center;
+justify-content: center;
+height: 112px;
+margin-bottom: 8px;
+  
+border-radius: 4px;
+border: 1px solid #8e8f99; 
+  
+background-color: #f4f4fd;  
 }
 
 .visually-hidden {
