--- a/css/styles.css
+++ b/css/styles.css
@@ -130,15 +130,15 @@ position: relative;
   }
 
 .item-studio::after {
- content: attr (href="./index.html");
-   width: 100%;
-  position: absolute; 
-  left: 0;
-  bottom: -1px; 
-  height: 4px;
-  background-color: #404bbf; 
-  border-radius: 2px; 
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+content: "";
+width: 100%;
+position: absolute; 
+left: 0;
+bottom: -1px; 
+height: 4px;
+background-color: #404bbf; 
+border-radius: 2px; 
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
 .header-address-item {
@@ -156,12 +156,14 @@ position: relative;
 
 .header-address-item-one {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-address-item-two {
   display: flex;
   margin-right: 0;
 
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
