--- a/css/styles.css
+++ b/css/styles.css
@@ -305,6 +305,8 @@ margin-bottom: 8px;
   color: #2e2f42;
 
   margin-bottom: 72px;
+
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-title {
@@ -327,7 +329,6 @@ margin-bottom: 8px;
   width: 264px;
   height: 380px;
 
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   background: #fff;
 
   text-align: center;
@@ -370,13 +371,14 @@ margin-bottom: 8px;
 }
 
 .icon-link-team {
-  width: 100%;
-  height: 100%;
-  background-color: #4D5AE5;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+width: 100%;
+height: 100%;
+background-color: #4D5AE5;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center; 
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .icon-list-team {
@@ -394,7 +396,7 @@ fill: #f4f4fd;
 
 .icon-link-team:hover,
 .icon-link-team:focus {
- background-clip: padding-box;
+ background-color: #404bbf; 
 }
 
 /* section-4 Our Portfolio */
