--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,10 @@ img {
   color: #2E2F42;
 }
 
+.ul-one {
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .header-name-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
