--- a/css/styles.css
+++ b/css/styles.css
@@ -546,12 +546,13 @@ margin-bottom: 16px;
 .icon-item {
   width: 40px;
   height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .icon-link {
   width: 100%;
     height: 100%;
-    background-color: #4D5AE5;
+    background-color: #4d5ae5;
     border-radius: 50%;
     display: flex;
     align-items: center;
