--- a/css/styles.css
+++ b/css/styles.css
@@ -544,7 +544,7 @@ margin-bottom: 16px;
 .icon-item {
   width: 40px;
   height: 40px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  gap: 16px;
 }
 
 .icon-link {
@@ -555,6 +555,7 @@ margin-bottom: 16px;
     display: flex;
     align-items: center;
     justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .icon-icon {
