--- a/css/styles.css
+++ b/css/styles.css
@@ -418,13 +418,13 @@ fill: #f4f4fd;
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
 }
 
-.portfolio-photo:hover { 
-transform: translateY(0%);
-}
-
 .portfolio-page-image {
 position: relative;
 overflow: hidden;
+}
+
+.portfolio-page-image:hover { 
+transform: translateY(0%);
 }
 
 .photo-text {
