--- a/css/styles.css
+++ b/css/styles.css
@@ -418,12 +418,11 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 transform: translateY(0%);
 }
 
-.portfolio-page-image {
-position: relative;
-overflow: hidden;
+.portfolio-page-image:hover {
+transform: translateY(0%);
 }
 
-portfolio-photo:hover {
+.portfolio-photo:hover {
 transform: translateY(0%);
 }
 
