--- a/css/styles.css
+++ b/css/styles.css
@@ -415,14 +415,9 @@ fill: #f4f4fd;
 
 .portfolio-page:hover {
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
-transform: translateY(0%);
 }
 
-.portfolio-page-image:hover {
-transform: translateY(0%);
-}
-
-.portfolio-photo:hover {
+.portfolio-page-image {
 transform: translateY(0%);
 }
 
