--- a/css/styles.css
+++ b/css/styles.css
@@ -434,8 +434,11 @@ padding: 40px 32px;
 background-color: #4d5ae5;
 height: 100%;
 width: 100%; 
-transform: translateY(100%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.photo-text:hover {
+transform: translateY(100%);
 }
 
 .portfolio-names {
