--- a/css/styles.css
+++ b/css/styles.css
@@ -155,11 +155,12 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #404bbf;
 }
 
-.header-address-item-one {
+.address-one,
+.address-two {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-address-item-two {
+.address-two {
 display: flex;
 margin-right: 0;
 
