--- a/css/styles.css
+++ b/css/styles.css
@@ -262,6 +262,7 @@ flex-shrink: 0;
 }
 
 .feature-subtitle {
+display: flex;
 font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
@@ -270,6 +271,7 @@ color: #2e2f42;
 }
 
 .feature-item-title {
+display: flex;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
