--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7),
 width: calc((100% - 72px) / 4);
 }
 
-.icon-icon-feature {
+.feature-one {
 display: flex;
 align-items: center;
 justify-content: center;
