--- a/css/styles.css
+++ b/css/styles.css
@@ -434,7 +434,7 @@ transform: translateY(0%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-.portfolio-photo:hover {
+.portfolio-page:hover {
 transform: translateY(100%);
 }
 
