--- a/css/styles.css
+++ b/css/styles.css
@@ -154,11 +154,11 @@ border-radius: 2px;
   color: #404bbf;
 }
 
-.address-one {
+.header-address-item:nth-child(1) {
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address-two {
+.header-address-item:nth-child(2) {
 display: flex;
 margin-right: 0;
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
