--- a/css/styles.css
+++ b/css/styles.css
@@ -412,12 +412,16 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .portfolio-page:hover {
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-transform: translateY(0%);
 }
 
 .portfolio-page-image {
 position: relative;
-  overflow: hidden; 
+overflow: hidden; 
+}
+
+.portfolio-photo:hover,
+.portfolio-photo:focus {
+transform: translateY(0%);
 }
 
 .photo-text {
