--- a/css/styles.css
+++ b/css/styles.css
@@ -414,13 +414,18 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-page-image {
+.portfolio-names {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  
 position: relative;
 overflow: hidden; 
 }
 
-.portfolio-photo:hover,
-.portfolio-photo:focus {
+
+.portfolio-names:hover,
+.portfolio-names:focus {
 transform: translateY(0%);
 }
 
@@ -442,12 +447,6 @@ height: 100%;
 width: 100%; 
 transform: translateY(100%); 
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-}
-
-.portfolio-names {
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
 }
 
 .portfolio-title {
