--- a/css/styles.css
+++ b/css/styles.css
@@ -428,6 +428,11 @@ overflow: hidden;
 transform: translateY(0%);
 }
 
+.photo-text:hover,
+.photo-text:focus {
+transform: translateY(100%);
+}
+
 .photo-text {
 position: absolute;
 top: 0;
