--- a/css/styles.css
+++ b/css/styles.css
@@ -457,6 +457,9 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-work {
+height: 100%;
+width: 100%; 
+  
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
