--- a/css/styles.css
+++ b/css/styles.css
@@ -428,6 +428,10 @@ overflow: hidden;
 transform: translateY(0%);
 }
 
+.photo-text:hover {
+transform: translateY(1000%);
+}
+
 .photo-text {
 position: absolute;
 top: 0;
@@ -442,7 +446,6 @@ padding: 40px 32px;
   
 background-color: #4d5ae5;
   
-transform: translateY(100%); 
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
