--- a/css/styles.css
+++ b/css/styles.css
@@ -423,13 +423,6 @@ position: relative;
 overflow: hidden; 
 }
 
-.portfolio-photo {
-}
-
-.portfolio-photo:hover {
-transform: translateY(0%);
-}
-
 .photo-text {
 position: absolute;
 top: 0;
@@ -446,6 +439,10 @@ background-color: #4d5ae5;
 
 transform: translateY(100%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+rotate .portfolio-photo {
+transform: translateY(0%);
 }
 
 .portfolio-title {
