--- a/css/styles.css
+++ b/css/styles.css
@@ -441,7 +441,7 @@ transform: translateY(100%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-rotate .portfolio-photo {
+rotate div {
 transform: translateY(0%);
 }
 
