--- a/css/styles.css
+++ b/css/styles.css
@@ -426,8 +426,6 @@ overflow: hidden;
 .photo-text {
 position: absolute;
 top: 0;
-height: 100%;
-width: 100%; 
   
 font-size: 16px;
 line-height: 1.5;
@@ -436,13 +434,15 @@ color: #f4f4fd;
 padding: 40px 32px;
   
 background-color: #4d5ae5;
+height: 100%;
+width: 100%; 
 
 transform: translateY(100%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-rotate div {
-transform: translateY(0%);
+.portfolio-photo:hover {
+background-color: #4D5AE5;
 }
 
 .portfolio-title {
