--- a/css/styles.css
+++ b/css/styles.css
@@ -433,15 +433,17 @@ letter-spacing: 0.02em;
 color: #f4f4fd;
 padding: 40px 32px;
 
+background-color: #4d5ae5;
+height: 100%;
+width: 100%;
 transform: translateY(100%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 transition-duration: 250ms;
 }
 
-.portfolio-names:hover {
+.photo-text:hover {
 background-color: #4d5ae5;
-height: 100%;
-width: 100%;
+transform: translateY(100%);
 }
 
 .portfolio-title {
