--- a/css/styles.css
+++ b/css/styles.css
@@ -408,6 +408,7 @@ fill: #f4f4fd;
 .portfolio-page {
 width: calc((100% - 48px) / 3);
 transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
 }
 
 .portfolio-page:hover {
@@ -415,6 +416,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 }
 
 .portfolio-names {
+display: flex;
 padding: 32px 16px;
 border: 1px solid #e7e9fc;
 border-top: none;
@@ -436,14 +438,17 @@ padding: 40px 32px;
 background-color: #4d5ae5;
 height: 100%;
 width: 100%;
+  
 transform: translateY(100%);
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-transition-duration: 250ms;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.photo-text:hover {
-background-color: #4d5ae5;
-transform: translateY(100%);
+.portfolio-photo:hover .photo-text {
+transform: translateY(0%);
+}
+
+.portfolio-names-two {
+padding-top: 32px;
 }
 
 .portfolio-title {
