--- a/css/styles.css
+++ b/css/styles.css
@@ -443,6 +443,11 @@ transform: translateY(100%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.photo-text:hover {
+background-color: #4d5ae5;
+color: #f4f4fd;
+}
+
 .portfolio-photo:hover .photo-text {
 transform: translateY(0%);
 }
