--- a/css/styles.css
+++ b/css/styles.css
@@ -418,6 +418,11 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .portfolio-names {
 position: relative;
 overflow: hidden; 
+
+display: flex;
+padding: 32px 16px;
+border: 1px solid #e7e9fc;
+border-top: none;
 }
 
 .photo-text {
