--- a/css/styles.css
+++ b/css/styles.css
@@ -428,6 +428,8 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .photo-text:hover {
 background-color: #4d5ae5;
 color: #f4f4fd;
+height: 100%;
+width: 100%;
 }
 
 .portfolio-names-two {
