--- a/css/styles.css
+++ b/css/styles.css
@@ -411,6 +411,10 @@ transform: translateY(0%);
 }
 
 .photo-text {
+height: 100%;
+width: 100%;
+display: flex;
+align-items: center;
 position: absolute;
 top: 0;
 font-size: 16px;
@@ -419,8 +423,6 @@ letter-spacing: 0.02em;
 padding: 40px 32px;
 color: #f4f4fd;
 background-color: #4d5ae5;
-height: 100%;
-width: 100%;
 transform: translateY(100%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -428,8 +430,6 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .photo-text:hover {
 background-color: #4d5ae5;
 color: #f4f4fd;
-height: 100%;
-width: 100%;
 }
 
 .portfolio-names-two {
