--- a/css/styles.css
+++ b/css/styles.css
@@ -382,9 +382,7 @@ fill: #f4f4fd;
 
 .portfolio-list {
   display: flex;
-  flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap: 48px;
+  gap: 24px;
 }
 
 .portfolio-page {
