--- a/css/styles.css
+++ b/css/styles.css
@@ -394,14 +394,16 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
+.photo-text, .portfolio-photo {
+height: 100%; 
+width: 100%;   
+}
+
 .portfolio-names {
 position: relative;
 overflow: hidden; 
-display: flex;
 border: 1px solid #e7e9fc;
 border-top: none;
-height: 100%;
-width: 100%;
 }
 
 .portfolio-page:hover 
