--- a/css/styles.css
+++ b/css/styles.css
@@ -406,6 +406,8 @@ position: relative;
 overflow: hidden; 
 border: 1px solid #e7e9fc;
 border-top: none;
+width: 360px;
+height: 300px; 
 }
 
 .portfolio-page:hover 
