--- a/css/styles.css
+++ b/css/styles.css
@@ -32,8 +32,6 @@ button {
 }
 
 header {
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 
 address {
@@ -102,14 +100,28 @@ img {
 }
 
 .header-item {
-  display: block;
-  color: #2e2f42;
-  padding: 24px 0;
+display: block;
+color: #2e2f42;
+padding: 24px 0;
+position: relative;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-item:hover,
 .header-item:focus {
   color: #404bbf;
+}
+
+.header-item.current {color: #404bbf;}
+.header-item.current::after {
+content: "";
+position: absolute;
+left: 0;
+bottom: -1px;
+height: 4px;
+background-color: #404bbf;
+border-radius: 2px;
+width: 100%;
 }
 
 .item-studio:hover
@@ -166,6 +178,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /* main */
 /* section-1 */
 .page {
+  margin:0 auto; 
   max-width: 1440px; 
   padding: 188px 0;
   background: #2e2f42;
@@ -286,7 +299,6 @@ color: #434455;
   text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 72px;
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-title {
@@ -329,6 +341,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+ margin-bottom: 80px; 
 }
 
 .icon-item-team {
@@ -430,6 +443,12 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .photo-text:hover {
 background-color: #4d5ae5;
 color: #f4f4fd;
+}
+
+.portfolio-names-two {
+padding: 32px 16px;
+border: 1px solid #e7e9fc;
+border-top: none;
 }
 
 .portfolio-title {
